[project]
name = "forum-scraper"
version = "0.1.0"
description = "Search 4x4community Tracks4Africa forum for road condition reports by place name"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.13.0",
    "python-dotenv>=1.2.1",
    "rich>=14.3.3",
]
